refactor location; change routingProvider; fix scrolling issue; CHANG CONFIG
refactor location (cleanup, extract geoUtils );
add provider pattern for routing service;
change routingProvider to YOURS;
fix issue: pointer dislocated when location-list is scrolled;
some minor cleanups;
ATTENTION: there are changes to the app*.config.js files (see
appConfig.base.js)

--- a/onYOURway/index.html
+++ b/onYOURway/index.html
@@ -11,11 +11,10 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="/App/_styles/themes/oyw1/jquery-ui-1.10.4.custom.css" rel="stylesheet" />
+  <link href="/App/_styles/jquery-ui/jquery-ui-1.10.4.custom.css" rel="stylesheet" />
   <link href="/App/_styles/ie10mobile.css" rel="stylesheet" />
   <link href="/App/_styles/durandal.css" rel="stylesheet" />
   <link href="/App/_styles/toastr.css" rel="stylesheet" />
-  <link href="/App/_styles/bootstrap.css" rel="stylesheet" />
   <link href="/App/_styles/font-awesome.css" rel="stylesheet" />
   <link href="/App/_styles/leaflet/leaflet.css" rel="stylesheet" />
   <link href="/App/_styles/leaflet/leaflet.awesome-markers.css" rel="stylesheet" />
@@ -27,7 +26,8 @@
   <link href="/App/_styles/owl.carousel.css" rel="stylesheet" />
   <link href="/App/_styles/owl.theme.css" rel="stylesheet" />
 
-  <link href="/App/_styles/_onYOURway.css" rel="stylesheet" />
+  <link href="/App/_styles/themes/onYOURway-2/bootstrap.css" rel="stylesheet" />
+  <link href="/App/_styles/themes/onYOURway-2/_onYOURway.css" rel="stylesheet" />
 
   <!-- Browser Tweaks -->
   <script type="text/javascript">
