add: App/theme folder and isolated themes from app

--- a/onYOURway/App/themes/vonMorgen-beta/shell.html
+++ b/onYOURway/App/themes/vonMorgen-beta/shell.html
@@ -1,4 +1,11 @@
-﻿<div id="shell">
+﻿<!--
+Theme:
+	vonMorgen (beta)
+URLs: (set in Views/Home/Index.cshtml)
+	kartevonmorgen.org
+-->
+
+<div id="shell">
 
   <!--ko compose: 'views/vonMorgen/_nav' -->
   <!--/ko-->
