add: von morgen Logo im Splash Screen cleanup: remove vonMorgen.beta theme

--- a/onYOURway.Client.WebApp/index.vonMorgen.html
+++ b/onYOURway.Client.WebApp/index.vonMorgen.html
@@ -70,7 +70,7 @@
 			</style>
 
 			<div id="page-splash-message">
-				<img src="/App/images/logo.targetsize-128.png" alt="onYOURway">
+				<img style="width: 240px; height: 119px;" src="/App/themes/vonMorgen/images/logoanimation.gif" alt="Karte von morgen">
 
 				<p><br /><i class="icon-spinner icon-2x icon-spin"></i></p>
 			</div>
