vonMorgen: add a new fast and "minimal version" of vonMorgen, that only uses really necessary libraries and parts of the existing implementations and that does NOT use bootstrap

--- a/onYOURway.Client.WebApp/index.vonMorgen.html
+++ b/onYOURway.Client.WebApp/index.vonMorgen.html
@@ -30,7 +30,7 @@
 	<link href="/App/themes/_shared.css" rel="stylesheet" />
 
 	<script type="text/javascript">
-		window.theme = 'vonMorgen';
+		window.theme = 'vonMorgenMin';
 	</script>
 
 	<!-- Browser Tweaks -->
@@ -119,7 +119,7 @@
 	<script src="/App/bindingHandlers/textDate-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/timeslider-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/typeahead-bindingHandler.js"></script>
-	<script src="/App/bindingHandlers/ventures-bindingHandler.js"></script>
+    <script src="/App/bindingHandlers/places-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/_instance-bindingProvider.js"></script>
 
 	<script type="text/javascript" src="/App/_libraries/require.js" data-main="/App/main"></script>
