vonMorgenMin: search results list

--- a/onYOURway.Client.WebApp/vonMorgen.html
+++ b/onYOURway.Client.WebApp/vonMorgen.html
@@ -49,12 +49,12 @@
             .page-splash {
                 position: absolute;
                 position: fixed;
-                width: 240px;
+                width: 470px;
                 left: 50%;
-                margin-left: -120px;
-                height: 160px;
+                margin-left: -235px;
+                height: 171px;
                 top: 50%;
-                margin-top: -80px;
+                margin-top: -86px;
                 text-align: center;
             }
 
@@ -64,7 +64,7 @@
         </style>
 
         <div id="page-splash-message">
-            <img style="width: 240px; height: 119px;" src="/App/themes/vonMorgen/images/logoanimation.gif" alt="Karte von morgen">
+            <img style="width: 470px; height: 171px;" src="/App/themes/vonMorgen/images/logo.png" alt="Karte von morgen">
 
             <p><br /><i class="icon-spinner icon-2x icon-spin"></i></p>
         </div>
