vonMorgenMin: use pre-compiled less / css by development environment instead of compiling on the fly with the javascript-library from less in the html file

--- a/onYOURway.Client.WebApp/vonMorgen.html
+++ b/onYOURway.Client.WebApp/vonMorgen.html
@@ -21,8 +21,8 @@
     <link href="/App/_styles/leaflet/MarkerCluster.Default.css" rel="stylesheet" />
     <link href="/App/_styles/select2.css" rel="stylesheet" />
 
-    <link rel="stylesheet/less" type="text/css" href="/App/themes/vonMorgenMin/css/vonMorgen.less" />
-    <script src="/App/_libraries/less.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/App/themes/vonMorgenMin/css/vonMorgen.css" />
+    <!--<script src="/App/_libraries/less.min.js" type="text/javascript"></script>-->
 
     <script type="text/javascript">
         window.theme = 'vonMorgenMin';
