siteCollector: suppress invalid error message when saving a new site with tags

--- a/onYOURway.Client.WebApp/vonMorgen.html
+++ b/onYOURway.Client.WebApp/vonMorgen.html
@@ -77,7 +77,7 @@
 <script src="/App/_libraries/knockout-3.2.0.js"></script>
 <script src="/App/_libraries/knockout.mapping-2.4.1.js"></script>
 
-<script src="/App/_libraries/q.js"></script>
+<script src="/App/_libraries/q.min.js"></script>
 <script src="/App/_libraries/breeze.min.js"></script>
 <script src="/App/_libraries/breeze.saveErrorExtensions.js"></script>
 <script src="/App/_libraries/moment-with-langs.js"></script>
