--- a/onYOURway.Client.WebApp/Tests/index.html
+++ b/onYOURway.Client.WebApp/Tests/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>QUnit Example</title>
 	<link rel="stylesheet" href="_qUnit/qunit-1.16.0.css">
+	<title>QUnit Tests for onYOURway App and Service Api</title>
 </head>
 <body>
     <div id="qunit"></div>
