--- a/onYOURway.Server.Net/Documentation/api.html
+++ b/onYOURway.Server.Net/Documentation/api.html
@@ -70,37 +70,32 @@
     <p>
             Returns a list of locations including their related properties
             </p>
-    <h5>Parameters</h5>
-    <p><strong>RegionId: </strong></p>
-    <p><strong>lang: </strong></p>
-    <h5>Return Value</h5>
-    <p><strong>Return Value: </strong>anonymous locationinfo</p>
-    <h4>SearchSuggestions(System.Int32,System.String)</h4>
-    <p>
-            Gets all features of the selected region as search suggestions (typeahead) for the main search box
-            </p>
-    <h5>Parameters</h5>
-    <p><strong>regionId: </strong>Id of the current region</p>
-    <p><strong>lang: </strong>Language id e.g. "de"</p>
-    <h5>Return Value</h5>
-    <p><strong>Return Value: </strong></p>
-    <h4>Places(System.Int32,System.String)</h4>
+    <h4>Places(System.String,System.String)</h4>
     <p>
             Gets all searchable features (Ventures, (Transport)Lines, (Transport)Stops, T)
             </p>
     <h5>Parameters</h5>
-    <p><strong>RegionId: </strong></p>
+    <p><strong>Region: </strong></p>
     <p><strong>lang: </strong></p>
     <h5>Return Value</h5>
     <p><strong>Return Value: </strong>Ventures</p>
-    <h4>GetTaxonomy(System.Int32,System.String)</h4>
+    <h4>Location(System.Guid)</h4>
     <p>
             DEPRICATED
             </p>
-    <h4>Place(System.Guid)</h4>
+    <h4>GetTaxonomy(System.String,System.Nullable{System.Guid},System.String)</h4>
     <p>
-            DEPRICATED
+            Gets the complete taxonomy
             </p>
+    <h4>SearchSuggestions(System.String,System.String)</h4>
+    <p>
+            Gets all features of the selected region as search suggestions (typeahead) for the main search box
+            </p>
+    <h5>Parameters</h5>
+    <p><strong>Region: </strong>Key of the current region</p>
+    <p><strong>lang: </strong>Language id e.g. "de"</p>
+    <h5>Return Value</h5>
+    <p><strong>Return Value: </strong></p>
     <h2>Controllers.MyController.VCard</h2>
             <p>
             <em>See: !:http://weblogs.asp.net/gunnarpeipman/archive/2009/08/09/creating-vcard-with-image-in-net.aspx</em>
