wip: building the locate API

--- a/onYOURway.Server.Net/Documentation/api.html
+++ b/onYOURway.Server.Net/Documentation/api.html
@@ -60,7 +60,7 @@
             </p>
     <h5>Return Value</h5>
     <p><strong>Return Value: </strong>Queryable Array of Realm</p>
-    <h4>Regions</h4>
+    <h4>Regions(System.String)</h4>
     <p>
             Geographical region (country, city) and administrative domain usually maintained by one realm. E.g. "Bayreuth von morgen"
             </p>
@@ -87,13 +87,13 @@
     <p>
             Gets the complete taxonomy
             </p>
-    <h4>SearchSuggestions(System.String,System.String)</h4>
+    <h4>SearchSuggestions(System.String,System.String,System.String,System.String)</h4>
     <p>
             Gets all features of the selected region as search suggestions (typeahead) for the main search box
             </p>
     <h5>Parameters</h5>
     <p><strong>Region: </strong>Key of the current region</p>
-    <p><strong>lang: </strong>Language id e.g. "de"</p>
+    <p><strong>Locale: </strong>Language id e.g. "de"</p>
     <h5>Return Value</h5>
     <p><strong>Return Value: </strong></p>
     <h2>Controllers.MyController.VCard</h2>
