wip: adding realm awareness and getConfigValue while refatoring API

--- a/onYOURway.Server.Net/Documentation/api.html
+++ b/onYOURway.Server.Net/Documentation/api.html
@@ -151,7 +151,7 @@
             <p>
             When importing data from foreign sources this is a unique key for the import source Recuring imports from the same source should use the same key.
             </p>
-            <p>The key may correspond to an external system key but it is not intended to create an external system for every imported spreadsheet.</p>
+            <p>The key may correspond to an external system key but it is not intended to create an external system for e.g. every imported spreadsheet.</p>
         <h4>SourceId</h4>
             <p>
             When importing data from foreign sources this is the unique id to identify the individual entry/record in the external source.
