fix: taxonomy schema; add $linq

--- a/onYOURway.Client.WebApp/index.html
+++ b/onYOURway.Client.WebApp/index.html
@@ -78,10 +78,10 @@
 		</div>
 	</div>
 
+
 	<script src="/App/_libraries/jquery-2.0.1.js"></script>
 	<script src="/App/_libraries/jquery-ui-1.10.4.custom.js"></script>
 	<script src="/App/_libraries/modernizr-2.7.1.js"></script>
-	<script src="/App/app.config.js"></script>
 	<script src="/App/_libraries/knockout-3.3.0.js"></script>
 	<script src="/App/_libraries/q.js"></script>
 	<script src="/App/_libraries/bootstrap.js"></script>
@@ -92,9 +92,12 @@
 	<script src="/App/_libraries/breeze.saveErrorExtensions.js"></script>
 	<script src="/App/_libraries/jquery.scrollTo-1.4.8.js"></script>
 	<script src="/App/_libraries/jquery.scrollIntoView.js"></script>
+
 	<script src="/App/_libraries/moment-with-langs.js"></script>
 	<script src="/App/_libraries/suncalc.js"></script>
 	<script src="/App/_libraries/opening_hours.js"></script>
+	<script src="/App/_libraries/jslinq.js"></script>
+
 	<script src="/App/_libraries/leaflet/leaflet-0.7.1.js"></script>
 	<script src="/App/_libraries/leaflet/javascript.util.js"></script>
 	<script src="/App/_libraries/leaflet/jsts.js"></script>
@@ -104,11 +107,17 @@
 	<script src="/App/_libraries/leaflet/leaflet.draw.js"></script>
 	<script src="/App/_libraries/bootstrap-datepicker.js"></script>
 	<script src="/App/_libraries/locales/bootstrap-datepicker.de.js"></script>
+
 	<script src="/App/_libraries/bootstrap-typeahead.js"></script>
 	<script src="/App/_libraries/intro.js"></script>
 	<script src="/App/_libraries/owl.carousel.js"></script>
 	<script src="/App/_libraries/select2/select2.js"></script>
 	<script src="/App/_libraries/knockout-bootstrap.js"></script>
+
+	<script src="/App/_libraries/bootstrap-typeahead.js"></script>
+	<script src="/App/bindingHandlers/typeahead-bindingHandler.js"></script>
+
+	<script src="/App/app.config.js"></script>
 	<script src="/App/extensions/global-extensions.js"></script>
 	<script src="/App/bindingHandlers/class-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/datepicker-bindingHandler.js"></script>
@@ -117,7 +126,6 @@
 	<script src="/App/bindingHandlers/select2-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/textDate-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/timeslider-bindingHandler.js"></script>
-	<script src="/App/bindingHandlers/typeahead-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/places-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/_instance-bindingProvider.js"></script>
 
