--- a/onYOURway.Client.WebApp/vonMorgen.html
+++ b/onYOURway.Client.WebApp/vonMorgen.html
@@ -77,7 +77,7 @@
 	<script src="/App/_libraries/knockout-3.3.0.js"></script>
 	<script src="/App/_libraries/knockout.mapping-2.4.1.js"></script>
 
-	<script src="/App/_libraries/q.min.js"></script>
+	<script src="/App/_libraries/q.js"></script>
 	<script src="/App/_libraries/breeze.min.js"></script>
 	<script src="/App/_libraries/breeze.saveErrorExtensions.js"></script>
 	<script src="/App/_libraries/moment-with-langs.js"></script>
@@ -99,7 +99,7 @@
 	<script src="/App/bindingHandlers/class-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/localize-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/map-bindingHandler.js"></script>
-	<script src="/App/bindingHandlers/select2-bindingHandler.js"></script>
+	<script src="/App/bindingHandlers/select2-vonMorgen-bindingHandler.js"></script>
 	<script src="/App/bindingHandlers/places-bindingHandler.js"></script>
 
 	<script src="/App/bindingHandlers/_instance-bindingProvider.js"></script>
